--- a/src/components/PropertyDetail.scss
+++ b/src/components/PropertyDetail.scss
@@ -25,6 +25,21 @@
   }
 }
 
+.property-detail__gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 15px;
+  margin-bottom: 30px;
+
+  &-item img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 8px;
+  }
+}
+
+
 .property-detail__card {
   background-color: #FFFFFF; // Het witte vak
   width: 100%;
